# doodle

./: CMakeLists.txt  hub.json  manifest.json.in
app/: BackgroundButton.qml  CMakeLists.txt  ColorButton.qml  doodle.desktop.in  doodle.qml
app/tests/autopilot/: run
app/tests/autopilot/doodle/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/Doodle/: backend.cpp  backend.h  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: doodle.doflah.pot
